Fix content header not rendering properly on mobile

--- a/web/components/common/ContentHeader/ContentHeader.module.scss
+++ b/web/components/common/ContentHeader/ContentHeader.module.scss
@@ -20,6 +20,7 @@
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 10px;
+      margin-top: 10px;
     }
   }
 }
